fix: burger menu z-index

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -201,11 +201,11 @@
   #header {
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 999;
     backdrop-filter: blur(1px);
     background: linear-gradient(
       to bottom,
-      rgba(0, 250, 250, 0.51) 0%,
+      rgba(0, 250, 250, 0.71) 0%,
       rgba(0, 250, 250, 0.15) 100%
     );
     /* background-color: rgba(
@@ -290,7 +290,7 @@
     top: 100%;
     left: 70%;
     display: none;
-    background: rgb(32, 180, 169, 0.3); /* burger menu background color */
+    background: rgb(32, 180, 169, 0.6); /* burger menu background color */
     backdrop-filter: blur(6px);
   }
   .welcome-title {
